cmake_minimum_required(VERSION 3.0)
project(unifyfs-bug)
set(UNIFYFS_INSTALL /usr/workspace/iopp/software/tailorfs/dependency/.spack-env/view)
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${CMAKE_SOURCE_DIR}/dependency/.spack-env/view ${UNIFYFS_INSTALL} ${CMAKE_BINARY_DIR}/lib/cmake)
#message(${CMAKE_PREFIX_PATH})
set(CMAKE_CXX_STANDARD 17)
set(BUG_CMAKE_DIR ${CMAKE_SOURCE_DIR}/CMake)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${BUG_CMAKE_DIR})
set(DEPENDENCY_LIB -lstdc++fs)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -rdynamic -L${CMAKE_SOURCE_DIR}/dependency/.spack-env/view/lib")

include_directories(external/UnifyFS/install)

find_package(unifyfs REQUIRED)
if (NOT ${UNIFYFS_FOUND})
    message(FATAL_ERROR "UnifyFS is needed for TailorFS build")
else ()
    message(STATUS "[UnifyFS] found headers at ${UNIFYFS_INCLUDE_DIRS}")
    include_directories(${UNIFYFS_INCLUDE_DIRS})
    set(DEPENDENCY_LIB ${DEPENDENCY_LIB} ${UNIFYFS_API_LIBRARIES})
endif ()
find_package(MPI COMPONENTS CXX REQUIRED)
if (MPI_FOUND)
    message(STATUS "[MPI] found mpi.h at ${MPI_CXX_INCLUDE_DIRS}")
    include_directories(${MPI_CXX_INCLUDE_DIRS})
    set(DEPENDENCY_LIB ${DEPENDENCY_LIB} ${MPI_CXX_LIBRARIES})
endif ()

set(SRC bug.cpp)
add_executable(${PROJECT_NAME} ${SRC})
target_link_libraries(${PROJECT_NAME} ${DEPENDENCY_LIB})